# sms-to-telegram

./: .gitignore  Dockerfile  Dockerfile.alpine  README.md  check_forwarder_health.py  enqueue_sms.py  entrypoint.sh  gammurc  pyproject.toml  send_worker.py  setup.sh  sms-to-telegram.container
.github/workflows/: publish-ghcr.yml
docs/superpowers/plans/: 2026-04-29-python-314-uv-migration.md
docs/superpowers/specs/: 2026-04-29-quadlet-local-deploy-design.md  2026-04-30-git-dynamic-versioning-design.md
sms_forwarder/: __init__.py  enqueue_hook.py  healthcheck.py  modem_monitor.py  queue_store.py  telegram_api.py  worker.py
tests/: test_enqueue_hook.py  test_healthcheck.py  test_modem_monitor.py  test_queue_store.py  test_runtime_contract.py  test_setup_script.py  test_worker.py
