[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "sms-to-telegram"
version = "0.1.0"
description = "Forward incoming SMS messages to Telegram with a durable local queue."
requires-python = ">=3.14,<3.15"
dependencies = []

[project.optional-dependencies]
dev = ["pytest==8.4.1"]

[project.scripts]
sms-forwarder-enqueue = "sms_forwarder.enqueue_hook:main"
sms-forwarder-worker = "sms_forwarder.worker:main"
sms-forwarder-healthcheck = "sms_forwarder.healthcheck:main"

[dependency-groups]
dev = ["pytest==8.4.1"]

[tool.setuptools]
packages = ["sms_forwarder"]
