[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9.2"]
build-backend = "setuptools.build_meta"

[project]
name = "sms-to-telegram"
dynamic = ["version"]
description = "Forward incoming SMS messages to Telegram with a durable local queue."
requires-python = ">=3.14,<3.15"
dependencies = []

[project.optional-dependencies]
dev = ["pytest==8.4.1"]

[project.scripts]
sms-forwarder-enqueue = "sms_forwarder.enqueue_hook:main"
sms-forwarder-worker = "sms_forwarder.worker:main"
sms-forwarder-healthcheck = "sms_forwarder.healthcheck:main"
sms-forwarder-modem-monitor = "sms_forwarder.modem_monitor:main"

[dependency-groups]
dev = ["pytest==8.4.1"]

[tool.setuptools]
packages = ["sms_forwarder"]
